--- a/index.html
+++ b/index.html
@@ -315,14 +315,14 @@
   Например, <b>Bebra VPN</b> отлично подходит и работает стабильно. 🌍
 </p>
     <div class="links-container">
-      <a class="link" href="https://t.me/Lucky_Bear_CashWin_bot/app?startapp=bXN0PTB4MWJlODE2NDg4Jm09SUdPUlImYz1ib3R0dGlucw" target="_blank">
+      <a class="link" href="https://t.me/Lucky_Bear_CashWin_bot/app?startapp=bXN0PTB4MWJlODE2NDg4Jm09SUdPUlImYz1ib3RzaG9ydA" target="_blank">
         <img src="image/avia.webp" alt="Aviamasters" class="link-icon">
         <div class="link-content">
           Aviamasters - Играть в Telegram 
         </div>
       </a>
 
-      <a class="link" href="https://t.me/+CaX99ba7SVE3Zjcy" target="_blank">
+      <a class="link" href="t.me/berlogalb" target="_blank">
         <img src="image/tg.jpg" alt="Telegram" class="link-icon">
         <div class="link-content">
           Telegram-канал | Розыгрыши и бонусы
@@ -339,6 +339,7 @@
   </div>
 </body>
 </html>
+
 
 
 
