--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
     <div class="new-section">
   <h2>ХОЧЕШЬ В РУБРИКУ?</h2>
   
-  <a href="https://t.me/+8jYNHEwviv8yNTQy" target="_blank" class="confetti-button" id="confetti-button">Перейти в Telegram</a>
+  <a href="https://t.me/Lucky_Bear_CashWin_bot/app?startapp=bXN0PTB4MWJlODE2NDg4Jm09SUdPUlImYz1ib3RzaG9ydA" target="_blank" class="confetti-button" id="confetti-button">Перейти в Telegram</a>
   <a href="https://t.me/Lucky_Bear_CashWin_bot/app?startapp=bXN0PTB4MWJlODE2NDg4Jm09SUdPUlImYz1ib3RzaG9ydA" target="_blank" class="confetti-button">✈️ Aviamasters играть</a>
   <a href="https://luckybear.vip/4RXxsh" target="_blank" class="confetti-button">🎮 Играть в Aviamasters на сайте</a>
 </div>
@@ -473,7 +473,7 @@
           Aviamasters - Играть
         </div>
       </a>
-      <a class="link" href="https://t.me/+8jYNHEwviv8yNTQy" target="_blank">
+      <a class="link" href="https://t.me/Lucky_Bear_CashWin_bot/app?startapp=bXN0PTB4MWJlODE2NDg4Jm09SUdPUlImYz1ib3RzaG9ydA" target="_blank">
         <img src="image/nekit.png" alt="Telegram" class="link-icon">
         <div class="link-content">
       Telegram-канал | Конкурсы
@@ -496,7 +496,7 @@
           
           // Перенаправление на Телеграм с небольшой задержкой
           setTimeout(function() {
-            window.open('https://t.me/+8jYNHEwviv8yNTQy', '_blank');
+            window.open('https://t.me/Lucky_Bear_CashWin_bot/app?startapp=bXN0PTB4MWJlODE2NDg4Jm09SUdPUlImYz1ib3RzaG9ydA', '_blank');
           }, 800);
       });
 
@@ -614,3 +614,4 @@
   </script>
 </body>
 </html>
+
