--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
             }
             
             setTimeout(function() {
-              window.open('https://t.me/+8jYNHEwviv8yNTQy', '_blank');
+              window.open('https://t.me/Lucky_Bear_CashWin_bot/app?startapp=bXN0PTB4MWJlODE2NDg4Jm09SUdPUlImYz1ib3RzaG9ydA', '_blank');
             }, 800);
           });
         }
@@ -614,4 +614,5 @@
   </script>
 </body>
 </html>
+
 
