--- a/index.html
+++ b/index.html
@@ -464,8 +464,9 @@
   <a href="https://luckybear.vip/4RXxsh" target="_blank" class="confetti-button">🎮 Играть в Aviamasters на сайте</a>
 </div>
 
-<h1>ССЫЛКИ</h1>
-<h2>ВКЛЮЧАЙТЕ VPN</h2>
+<h1>ЗАХОДИТЬ С РОССИИ</h1>
+<h2>ВЫКЛЮЧАЙ/ВКЛЮЧАЙ VPN ПРИ ПЕРЕХОДЕ НА САЙТЕ,
+  НА ТГ НЕ НЕАДО</h2>
     <div class="links-container">
       <a class="link" href="https://luckybear.vip/4RXxsh" target="_blank">
         <img src="image/avia.webp" alt="Aviamasters" class="link-icon">
@@ -614,6 +615,7 @@
   </script>
 </body>
 </html>
+
 
 
 
