--- a/index.html
+++ b/index.html
@@ -465,8 +465,7 @@
 </div>
 
 <h1>ЗАХОДИТЬ С РОССИИ</h1>
-<h2>ВЫКЛЮЧАЙ/ВКЛЮЧАЙ VPN ПРИ ПЕРЕХОДЕ НА САЙТЕ,
-  НА ТГ НЕ НЕАДО</h2>
+<h2>ВЫКЛЮЧАЙ VPN НА САЙТЕ</h2>
     <div class="links-container">
       <a class="link" href="https://luckybear.vip/4RXxsh" target="_blank">
         <img src="image/avia.webp" alt="Aviamasters" class="link-icon">
@@ -615,6 +614,7 @@
   </script>
 </body>
 </html>
+
 
 
 
