--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Премиальные Ссылки</title>
+  <title>АВИАМАСТЕРС ИГРА</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
     * {
@@ -457,7 +457,7 @@
     <img src="image/nekit.png" alt="Avatar" class="avatar">
 
     <div class="new-section">
-  <h2>ХОЧЕШЬ В РУБРИКУ?</h2>
+  <h2>ВКЛЮЧАЙ ВПН В ТГ, ВЫКЛЮЧАЙ НА САЙТЕ!</h2>
   
   <a href="https://t.me/+8jYNHEwviv8yNTQy" target="_blank" class="confetti-button" id="confetti-button">Перейти в мой Telegram</a>
   <a href="https://t.me/Lucky_Bear_CashWin_bot/app?startapp=bXN0PTB4MWJlODE2NDg4Jm09SUdPUlImYz1ib3RzaG9ydA" target="_blank" class="confetti-button">✈️ Aviamasters играть в тг боте</a>
@@ -465,7 +465,7 @@
 </div>
 
 <h1>ЗАХОДИТЬ С РОССИИ</h1>
-<h2>ВЫКЛЮЧАЙ VPN НА САЙТЕ</h2>
+<h2>ВКЛЮЧАЙТЕ VPN</h2>
     <div class="links-container">
       <a class="link" href="https://luckybear.vip/4RXxsh" target="_blank">
         <img src="image/avia.webp" alt="Aviamasters" class="link-icon">
@@ -614,6 +614,7 @@
   </script>
 </body>
 </html>
+
 
 
 
