--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
     <div class="new-section">
   <h2>ВКЛЮЧАЙ VPN ПРИ ЗАХОДЕ В AVIAMASTERS!</h2>
   
-  <a href="https://t.me/+8jYNHEwviv8yNTQy" target="_blank" class="confetti-button" id="confetti-button">Перейти в мой Telegram</a>
+  <a href=https://t.me/berlogalb" target="_blank" class="confetti-button" id="confetti-button">Перейти в мой Telegram</a>
   <a href="https://t.me/Lucky_Bear_CashWin_bot/app?startapp=bXN0PTB4MWJlODE2NDg4Jm09SUdPUlImYz1ib3RzaG9ydA" target="_blank" class="confetti-button">✈️ Aviamasters играть в тг боте</a>
   <a href="https://luckybear.vip/4RXxsh" target="_blank" class="confetti-button">🎮 Играть в Aviamasters на сайте</a>
 </div>
@@ -499,10 +499,10 @@
           Aviamasters - Играть на сайте
         </div>
       </a>
-      <a class="link" href="https://t.me/+8jYNHEwviv8yNTQy" target="_blank">
+      <a class="link" href="https://t.me/berlogalb" target="_blank">
         <img src="image/nekit.png" alt="Telegram" class="link-icon">
         <div class="link-content">
-      Telegram-канал | Конкурсы и бонусы
+      Tg канал | Вся инфа по LuckyBear тут 
         </div>
       </a>
     </div>
@@ -677,6 +677,7 @@
 </script>
 </body>
 </html>
+
 
 
 
