--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
     <div class="new-section">
   <h2>ВКЛЮЧАЙ VPN ПРИ ЗАХОДЕ В AVIAMASTERS!</h2>
   
-  <a href=https://t.me/berlogalb" target="_blank" class="confetti-button" id="confetti-button">Перейти в мой Telegram</a>
+  <a href=https://t.me/berlogalb" target="_blank" class="confetti-button" id="confetti-button">Вся инфа в моем тг тут</a>
   <a href="https://t.me/Lucky_Bear_CashWin_bot/app?startapp=bXN0PTB4MWJlODE2NDg4Jm09SUdPUlImYz1ib3RzaG9ydA" target="_blank" class="confetti-button">✈️ Aviamasters играть в тг боте</a>
   <a href="https://luckybear.vip/4RXxsh" target="_blank" class="confetti-button">🎮 Играть в Aviamasters на сайте</a>
 </div>
@@ -677,6 +677,7 @@
 </script>
 </body>
 </html>
+
 
 
 
