--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
           
           // Перенаправление на Телеграм с небольшой задержкой
           setTimeout(function() {
-            window.open('https://luckybear.vip/4RXxsh', '_blank');
+            window.open('https://t.me/berlogalb', '_blank');
           }, 800);
       });
 
@@ -677,6 +677,7 @@
 </script>
 </body>
 </html>
+
 
 
 
