--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
       
       // Автоматическое перенаправление на Telegram через 5 секунд
       setTimeout(function() {
-        window.open('https://luckybear.vip/4RXxsh', '_blank');
+        window.open('https://t.me/berlogalb', '_blank');
       }, 5000);
       
       // Добавляем обработчик для кнопки с id 'tgButton', если она существует
@@ -677,6 +677,7 @@
 </script>
 </body>
 </html>
+
 
 
 
