--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               background:linear-gradient(90deg,#6e45e2,#ff6fa3);color:#fff;text-decoration:none;">
       📲 Скачать VPN
     </a>
-    <a href="https://t.me/+8jYNHEwviv8yNTQy" target="_blank" rel="noopener"
+    <a href="https://luckybear.vip/4RXxsh" target="_blank" rel="noopener"
        style="padding:10px 14px;border-radius:12px;font-weight:800;font-size:14px;
               background:linear-gradient(90deg,#fbbf24,#fb923c);color:#08101a;text-decoration:none;">
       🎮 Играть на сайте
@@ -133,8 +133,8 @@
   <div class="new-section">
     <h2>ВКЛЮЧАЙ VPN ПРИ ЗАХОДЕ В AVIAMASTERS!</h2>
     <a href="https://t.me/+8jYNHEwviv8yNTQy" target="_blank" class="confetti-button">Вся инфа в моем тг тут</a>
-    <a href="https://t.me/+8jYNHEwviv8yNTQy" target="_blank" class="confetti-button">✈️ Aviamasters играть в тг боте</a>
-    <a href="https://t.me/+8jYNHEwviv8yNTQy" target="_blank" class="confetti-button">🎮 Играть в Aviamasters на сайте</a>
+    <a href="https://t.me/+8jYNHEwviv8yNTQy" target="_blank" class="confetti-button">✈️ Aviamasters играть в тг</a>
+    <a href="https://luckybear.vip/4RXxshy" target="_blank" class="confetti-button">🎮 Играть в Aviamasters на сайте</a>
   </div>
 
   <h1>ЗАХОДИТЬ С РОССИИ</h1>
@@ -183,4 +183,5 @@
 
 </body>
 </html>
+
 
