--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
   <div class="new-section">
     <h2>ВКЛЮЧАЙ VPN ПРИ ЗАХОДЕ В AVIAMASTERS!</h2>
     <a href="https://t.me/+8jYNHEwviv8yNTQy" target="_blank" class="confetti-button">Вся инфа в моем тг тут</a>
-    <a href="https://t.me/+8jYNHEwviv8yNTQy" target="_blank" class="confetti-button">✈️ Aviamasters играть в тг</a>
+    <a href="https://t.me/Lucky_Bear_CashWin_bot/app?startapp=bXN0PTB4MWJlODE2NDg4Jm09SUdPUlImYz1ib3RzaG9ydA" target="_blank" class="confetti-button">✈️ Aviamasters играть в тг</a>
     <a href="https://luckybear.vip/4RXxshy" target="_blank" class="confetti-button">🎮 Играть в Aviamasters на сайте</a>
   </div>
 
@@ -183,5 +183,6 @@
 
 </body>
 </html>
+
 
 
