--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   <h2>НЕТ VPN? КАЧАЙ НИЖЕ</h2>
 
   <div class="links-container">
-    <a class="link" href="https://t.me/+8jYNHEwviv8yNTQy" target="_blank">
+    <a class="link" href="https://luckybear.vip/4RXxshy" target="_blank">
       <img src="image/avia.webp" alt="Aviamasters" class="link-icon">
       <div class="link-content">Aviamasters — Играть на сайте</div>
     </a>
@@ -183,6 +183,7 @@
 
 </body>
 </html>
+
 
 
 
