--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <a href="https://luckybear.vip/4RXxshy" target="_blank" class="confetti-button">🎮 Играть в Aviamasters на сайте</a>
   </div>
 
-  <h1>ЗАХОДИТЬ С РОССИИ</h1>
+  <h1>ЗАХОДИТЬ С VPN</h1>
   <h2>НЕТ VPN? КАЧАЙ НИЖЕ</h2>
 
   <div class="links-container">
@@ -183,6 +183,7 @@
 
 </body>
 </html>
+
 
 
 
