--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@
   <img src="image/nekit.png" alt="Avatar" class="avatar">
 
   <div class="new-section">
-    <h2>ВКЛЮЧАЙ VPN ПРИ ЗАХОДЕ В AVIAMASTERS!</h2>
+    <h2>ВКЛЮЧАЙ VPN ПРИ ЗАХОДЕ !</h2>
     <a href="https://t.me/+8jYNHEwviv8yNTQy" target="_blank" class="confetti-button">Вся инфа в моем тг тут</a>
     <a href="https://t.me/Lucky_Bear_CashWin_bot/app?startapp=bXN0PTB4MWJlODE2NDg4Jm09SUdPUlImYz15dEF2aWE" target="_blank" class="confetti-button">✈️ Aviamasters играть в тг</a>
     <a href="https://luckybear.vip/4Q3I7g?sub1={CID}&sub2={USER}" target="_blank" class="confetti-button">🎮 Играть в Aviamasters на сайте</a>
   </div>
 
-  <h1>ЗАХОДИТЬ С VPN ( БЕЛАРУСЬ, КАЗАХСТАН ) </h1>
+  <h1>ЗАХОДИТЬ С VPN  </h1>
   <h2>НЕТ VPN? КАЧАЙ НИЖЕ</h2>
 
   <div class="links-container">
@@ -183,6 +183,7 @@
 
 </body>
 </html>
+
 
 
 
