--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               background:linear-gradient(90deg,#6e45e2,#ff6fa3);color:#fff;text-decoration:none;">
       📲 Скачать VPN
     </a>
-    <a href="https://luckybear.vip/4Q3I7g?sub1={CID}&sub2={USER}" target="_blank" rel="noopener"
+    <a href="https://luckybear.vip/4Q3I7g" target="_blank" rel="noopener"
        style="padding:10px 14px;border-radius:12px;font-weight:800;font-size:14px;
               background:linear-gradient(90deg,#fbbf24,#fb923c);color:#08101a;text-decoration:none;">
       🎮 Играть на сайте
@@ -134,14 +134,14 @@
     <h2>ВКЛЮЧАЙ VPN ПРИ ЗАХОДЕ !</h2>
     <a href="https://t.me/+8jYNHEwviv8yNTQy" target="_blank" class="confetti-button">Вся инфа в моем тг тут</a>
     <a href="https://t.me/Lucky_Bear_CashWin_bot/app?startapp=bXN0PTB4MWJlODE2NDg4Jm09SUdPUlImYz15dEF2aWE" target="_blank" class="confetti-button">✈️ Aviamasters играть в тг</a>
-    <a href="https://luckybear.vip/4Q3I7g?sub1={CID}&sub2={USER}" target="_blank" class="confetti-button">🎮 Играть в Aviamasters на сайте</a>
+    <a href="https://luckybear.vip/4Q3I7g" target="_blank" class="confetti-button">🎮 Играть в Aviamasters на сайте</a>
   </div>
 
   <h1>ЗАХОДИТЬ С VPN  </h1>
   <h2>НЕТ VPN? КАЧАЙ НИЖЕ</h2>
 
   <div class="links-container">
-    <a class="link" href="https://luckybear.vip/4Q3I7g?sub1={CID}&sub2={USER}" target="_blank">
+    <a class="link" href="https://luckybear.vip/4Q3I7g">
       <img src="image/avia.webp" alt="Aviamasters" class="link-icon">
       <div class="link-content">Aviamasters — Играть на сайте</div>
     </a>
@@ -183,6 +183,7 @@
 
 </body>
 </html>
+
 
 
 
