--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <div class="link-content">Aviamasters — Играть в ТГ</div>
       </a>
 
-      <a class="link" href="https://t.me/+8jYNHEwviv8yNTQy" target="_blank" rel="noopener">
+      <a class="link" href="https://t.me/berlogalb" target="_blank" rel="noopener">
         <img src="image/nekit.png" alt="Telegram" class="link-icon">
         <div class="link-content">TG канал — Вся инфа по LuckyBear</div>
       </a>
