--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
               background:linear-gradient(90deg,#6e45e2,#ff6fa3);color:#fff;text-decoration:none;">
       📲 Скачать VPN
     </a>
-    <a href="https://luckybear.vip/4Q3I7g" target="_blank" rel="noopener"
+    <a href="https://luckybear.vip/0swWXy" target="_blank" rel="noopener"
        style="padding:10px 14px;border-radius:12px;font-weight:800;font-size:14px;
               background:linear-gradient(90deg,#fbbf24,#fb923c);color:#08101a;text-decoration:none;">
       🎮 Играть на сайте
@@ -142,12 +142,12 @@
 
     <!-- Перенесённые вверх кнопки + добавлена кнопка "Играть в ТГ" в таком же стиле -->
     <div class="links-container top-links">
-      <a class="link" href="https://luckybear.vip/4Q3I7g" target="_blank" rel="noopener">
+      <a class="link" href="https://luckybear.vip/0swWXy" target="_blank" rel="noopener">
         <img src="image/avia.webp" alt="Aviamasters" class="link-icon">
         <div class="link-content">Aviamasters — Играть на сайте</div>
       </a>
 
-      <a class="link" href="https://t.me/Lucky_Bear_CashWin_bot/app?startapp=bXN0PTB4MWJlODE2NDg4Jm09SUdPUlImYz15dEF2aWE" target="_blank" rel="noopener">
+      <a class="link" href="https://t.me/Lucky_Bear_CashWin_bot/app?startapp=bXN0PTB4MWJlODE2NDg4Jm09SUdPUlImYz1ib3RZVA" target="_blank" rel="noopener">
         <img src="image/avia.webp" alt="Aviamasters TG" class="link-icon">
         <div class="link-content">Aviamasters — Играть в ТГ</div>
       </a>
