--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <div class="link-content">Aviamasters — Играть на сайте</div>
       </a>
 
-      <a class="link" href="https://t.me/Lucky_Bear_CashWin_bot/app?startapp=bXN0PTB4MWJlODE2NDg4Jm09SUdPUlImYz1ib3RZVA" target="_blank" rel="noopener">
+      <a class="link" href="https://t.me/berlogalb" target="_blank" rel="noopener">
         <img src="image/avia.webp" alt="Aviamasters TG" class="link-icon">
         <div class="link-content">Aviamasters — Играть в ТГ</div>
       </a>
