--- a/index.html
+++ b/index.html
@@ -121,11 +121,12 @@
 
 <div id="lb-topbar" style="position:fixed;top:0;left:0;right:0;z-index:9999">
   <div style="max-width:980px;margin:10px auto 0;display:flex;gap:10px;justify-content:space-between;align-items:center;padding:6px 10px">
-    <a href="#vpn-download"
-       style="padding:10px 14px;border-radius:12px;font-weight:700;font-size:14px;
-              background:linear-gradient(90deg,#6e45e2,#ff6fa3);color:#fff;text-decoration:none;">
-      📲 Скачать VPN
-    </a>
+  <a href="https://t.me/Lucky_Bear_CashWin_bot/app?startapp=bXN0PTB4MWJlODE2NDg4Jm09SUdPUlImYz1ib3RZVA"
+   target="_blank" rel="noopener"
+   style="padding:10px 14px;border-radius:12px;font-weight:700;font-size:14px;
+          background:linear-gradient(90deg,#6ef0c8,#3be6a2);color:#08101a;text-decoration:none;">
+  🎮 Играть в ТГ
+</a>
     <a href="https://luckybear.vip/0swWXy" target="_blank" rel="noopener"
        style="padding:10px 14px;border-radius:12px;font-weight:800;font-size:14px;
               background:linear-gradient(90deg,#fbbf24,#fb923c);color:#08101a;text-decoration:none;">
