--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 <div class="grid-layer grid3" id="grid3"></div>
 
 <header>
-  <a href="https://t.me/+WzIhroNJg85mYzZi" class="tg-btn" target="_blank">Мой ТГК</a>
+  <a href="https://t.me/+YNjFLkeLFCo0NDE6" class="tg-btn" target="_blank">Мой ТГК</a>
   <a href="https://t.me/+YNjFLkeLFCo0NDE6" class="tg-btn" target="_blank">Мой ТГК</a>
 </header>
 
@@ -216,10 +216,10 @@
   <div class="tg-info">Розыгрыши, акции и игры в Telegram</div>
   <h1>AVIONIX</h1>
   <div class="btn-container">
-    <a href="https://lb333.me/5nJSkt" class="game-btn" target="_blank">✈️ Aviamaster — Играть</a>
-    <a href="https://1wclaa.life/casino/list?open=register&p=pq1r" class="game-btn" target="_blank">🎣 Ice Fishing — Играть</a>
-    <a href="https://1wclaa.life/casino/list?open=register&p=pq1r" class="game-btn" target="_blank">🏰 Tower Rush — Играть</a>
-    <a href="https://1wclaa.life/casino/list?open=register&p=pq1r" class="game-btn" target="_blank">💣 Minedrop — Играть</a>
+    <a href="https://t.me/+YNjFLkeLFCo0NDE6" class="game-btn" target="_blank">✈️ Aviamaster — Играть</a>
+    <a href="https://t.me/+YNjFLkeLFCo0NDE6" class="game-btn" target="_blank">🎣 Ice Fishing — Играть</a>
+    <a href="https://t.me/+YNjFLkeLFCo0NDE6" class="game-btn" target="_blank">🏰 Tower Rush — Играть</a>
+    <a href="https://t.me/+YNjFLkeLFCo0NDE6" class="game-btn" target="_blank">💣 Minedrop — Играть</a>
   </div>
   <div class="vpn-note">Если не работает — включай VPN</div>
   <a href="https://t.me/hitvpnbot?start=1410148627402396" class="vpn-btn" target="_blank">Включить VPN</a>
