--- a/index.html
+++ b/index.html
@@ -213,13 +213,12 @@
 
 <main>
   <img src="igor.png" alt="Logo" class="logo">
-  <div class="tg-info">Розыгрыши, акции и игры в Telegram</div>
+  <div class="tg-info">НЕ РАБОТАЮТ ИГРЫ? ВКЛЮЧИ VPN</div>
   <h1>AVIONIX</h1>
   <div class="btn-container">
-    <a href="https://t.me/+YNjFLkeLFCo0NDE6" class="game-btn" target="_blank">✈️ Aviamaster — Играть</a>
-    <a href="https://t.me/+YNjFLkeLFCo0NDE6" class="game-btn" target="_blank">🎣 Ice Fishing — Играть</a>
-    <a href="https://t.me/+YNjFLkeLFCo0NDE6" class="game-btn" target="_blank">🏰 Tower Rush — Играть</a>
-    <a href="https://t.me/+YNjFLkeLFCo0NDE6" class="game-btn" target="_blank">💣 Minedrop — Играть</a>
+    <a href="https://t.me/+YNjFLkeLFCo0NDE6" class="game-btn" target="_blank">💸 Telegram - розыгрыши,бонусы,игры</a>
+    <a href="https://lb333.me/5nJSkt" class="game-btn" target="_blank">✅ Играть на сайте</a>
+    <a href="https://t.me/Lucky_Bear_SpinPro_Bot/app?startapp=bXN0PTB4MWJlODE2NDg4Jm09SUdPUlImYz1ha3R1YWx5dA" class="game-btn" target="_blank">✅ Играть в тг боте</a>
   </div>
   <div class="vpn-note">Если не работает — включай VPN</div>
   <a href="https://t.me/hitvpnbot?start=1410148627402396" class="vpn-btn" target="_blank">Включить VPN</a>
