--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
   <h1>AVIONIX</h1>
   <div class="btn-container">
     <a href="https://t.me/+YNjFLkeLFCo0NDE6" class="game-btn" target="_blank">💸 Telegram - розыгрыши,бонусы,игры</a>
-    <a href="https://lb333.me/5nJSkt" class="game-btn" target="_blank">✅ Играть на сайте</a>
-    <a href="https://t.me/Lucky_Bear_SpinPro_Bot/app?startapp=bXN0PTB4MWJlODE2NDg4Jm09SUdPUlImYz1ha3R1YWx5dA" class="game-btn" target="_blank">✅ Играть в тг боте</a>
+    <a href="https://lb333.me/5nJSkt" class="game-btn" target="_blank">✅ LuckyBear casino - Играть на сайте</a>
+    <a href="https://t.me/Lucky_Bear_SpinPro_Bot/app?startapp=bXN0PTB4MWJlODE2NDg4Jm09SUdPUlImYz1ha3R1YWx5dA" class="game-btn" target="_blank">✅ LuckyBear casino -  Играть в тг боте</a>
   </div>
   <div class="vpn-note">Если не работает — включай VPN</div>
   <a href="https://t.me/hitvpnbot?start=1410148627402396" class="vpn-btn" target="_blank">Включить VPN</a>
@@ -262,3 +262,4 @@ if(/Mobi|Android/i.test(navigator.userAgent)){
 
 </body>
 </html>
+
