--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
 <div class="grid-layer grid3" id="grid3"></div>
 
 <header>
-  <a href="https://t.me/+YNjFLkeLFCo0NDE6" class="tg-btn" target="_blank">Мой ТГК</a>
-  <a href="https://t.me/+YNjFLkeLFCo0NDE6" class="tg-btn" target="_blank">Мой ТГК</a>
+  <a href="https://t.me/+WzIhroNJg85mYzZi" class="tg-btn" target="_blank">Мой ТГК</a>
+  <a href="https://t.me/+WzIhroNJg85mYzZi" class="tg-btn" target="_blank">Мой ТГК</a>
 </header>
 
 <main>
@@ -216,9 +216,9 @@
   <div class="tg-info">НЕ РАБОТАЮТ ИГРЫ? ВКЛЮЧИ VPN</div>
   <h1>AVIONIX</h1>
   <div class="btn-container">
-    <a href="https://t.me/+YNjFLkeLFCo0NDE6" class="game-btn" target="_blank">💸 Telegram - розыгрыши,бонусы,игры</a>
-    <a href="https://lb333.me/5nJSkt" class="game-btn" target="_blank">✅ LuckyBear casino - Играть на сайте</a>
-    <a href="https://t.me/Lucky_Bear_SpinPro_Bot/app?startapp=bXN0PTB4MWJlODE2NDg4Jm09SUdPUlImYz1ha3R1YWx5dA" class="game-btn" target="_blank">✅ LuckyBear casino -  Играть в тг боте</a>
+    <a href="https://t.me/+WzIhroNJg85mYzZi" class="game-btn" target="_blank">💸 Telegram - розыгрыши,бонусы,игры</a>
+    <a href="https://1wclaa.life/casino/list?open=register&p=pq1r" class="game-btn" target="_blank">✅ 1win Casino - Играть на сайте</a>
+    <a href="https://t.me/+WzIhroNJg85mYzZi" class="game-btn" target="_blank">✅ 1win Casino -  Играть в тг </a>
   </div>
   <div class="vpn-note">Если не работает — включай VPN</div>
   <a href="https://t.me/hitvpnbot?start=1410148627402396" class="vpn-btn" target="_blank">Включить VPN</a>
@@ -262,4 +262,5 @@ if(/Mobi|Android/i.test(navigator.userAgent)){
 
 </body>
 </html>
+
 
