--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
   <h1>AVIONIX</h1>
   <div class="btn-container">
     <a href="https://t.me/+YNjFLkeLFCo0NDE6" class="game-btn" target="_blank">💸 Telegram - розыгрыши,бонусы,игры</a>
-    <a href="https://t.me/+YNjFLkeLFCo0NDE6" class="game-btn" target="_blank">✅ Все игры в моем тг </a>
+    <a href="https://t.me/+YNjFLkeLFCo0NDE6" class="game-btn" target="_blank">✅ ИГРЫ ЗДЕСЬ В ТГ </a>
   </div>
   <div class="vpn-note">Если не работает — включай VPN</div>
   <a href="https://t.me/hitvpnbot?start=1410148627402396" class="vpn-btn" target="_blank">Включить VPN</a>
@@ -261,6 +261,7 @@ if(/Mobi|Android/i.test(navigator.userAgent)){
 
 </body>
 </html>
+
 
 
 
