--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>AVIONIX</title>
+
 <style>
   * { margin:0; padding:0; box-sizing:border-box; }
   body {
     font-family:"Inter",sans-serif;
     min-height:100vh;
-    overflow:hidden;
+
+    /* ✔ Глубокий синий фон */
+    background: radial-gradient(circle at center, #07224a 0%, #021123 100%);
     color:#fff;
-    background:#001a0f;
+    overflow:hidden;
     position:relative;
   }
 
-  /* Слои сетки для 3D параллакса */
+  /* ———————————— СЕТКА В БЕЛО-СИНИХ ТОНАХ ———————————— */
   .grid-layer {
     position: fixed;
     top: 0; left: 0;
@@ -23,207 +26,208 @@
     height: 200%;
     pointer-events: none;
     mix-blend-mode: overlay;
-    transition: transform 0.1s ease;
     z-index: -1;
+    opacity: 0.11;
+    transition: transform 0.1s ease;
   }
 
   .grid1 {
     background-image:
-      repeating-linear-gradient(0deg, rgba(0,255,120,0.08) 0 2px, transparent 2px 150px),
-      repeating-linear-gradient(90deg, rgba(0,255,120,0.08) 0 2px, transparent 2px 150px);
-    filter: blur(10px);
-    box-shadow:0 0 20px rgba(0,255,120,0.2);
+      repeating-linear-gradient(0deg, rgba(255,255,255,0.20) 0 1px, transparent 1px 160px),
+      repeating-linear-gradient(90deg, rgba(255,255,255,0.20) 0 1px, transparent 1px 160px);
+    filter: blur(4px);
   }
 
   .grid2 {
     background-image:
-      repeating-linear-gradient(0deg, rgba(0,255,120,0.06) 0 1px, transparent 1px 200px),
-      repeating-linear-gradient(90deg, rgba(0,255,120,0.06) 0 1px, transparent 1px 200px);
-    filter: blur(15px);
-    box-shadow:0 0 30px rgba(0,255,120,0.15);
+      repeating-linear-gradient(0deg, rgba(140,180,255,0.20) 0 1px, transparent 1px 210px),
+      repeating-linear-gradient(90deg, rgba(140,180,255,0.20) 0 1px, transparent 1px 210px);
+    filter: blur(5px);
   }
 
   .grid3 {
     background-image:
-      repeating-linear-gradient(0deg, rgba(0,255,120,0.04) 0 1px, transparent 1px 250px),
-      repeating-linear-gradient(90deg, rgba(0,255,120,0.04) 0 1px, transparent 1px 250px);
-    filter: blur(20px);
-    box-shadow:0 0 40px rgba(0,255,120,0.1);
+      repeating-linear-gradient(0deg, rgba(200,220,255,0.15) 0 1px, transparent 1px 260px),
+      repeating-linear-gradient(90deg, rgba(200,220,255,0.15) 0 1px, transparent 1px 260px);
+    filter: blur(6px);
   }
 
+  /* ———————————— HEADER ———————————— */
   header {
     position: fixed;
     top: 20px;
     width: 100%;
-    display:flex;
-    justify-content:space-between;
-    padding:0 20px;
-    z-index:10;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 20px;
+    z-index: 10;
     opacity: 0;
-    animation: fadeIn 1s forwards;
-    animation-delay: 0.5s;
+    animation: fadeIn 1s forwards .4s;
   }
 
   .tg-btn {
-    color:#fff;
-    text-decoration:none;
-    padding:12px 24px;
-    border:1px solid #fff;
-    border-radius:30px;
-    font-weight:600;
-    transition:0.3s;
+    padding: 12px 30px;
+    text-decoration: none;
+    font-weight: 600;
+    border-radius: 50px;
+
+    /* ✔ Белая обводка */
+    border: 1px solid rgba(255,255,255,0.8);
+
+    background: rgba(255,255,255,0.07);
+    color: #fff;
+    transition: .25s;
   }
 
-  .tg-btn:hover { background:rgba(255,255,255,0.1); }
+  .tg-btn:hover {
+    background:#4f8cff;
+    box-shadow:0 0 20px rgba(120,160,255,.8);
+    transform:translateY(-3px);
+  }
 
+  /* ———————————— MAIN ———————————— */
   main {
-    display:flex;
-    flex-direction:column;
-    align-items:center;
-    justify-content:center;
-    text-align:center;
-    height:100vh;
-    position:relative;
-    z-index:2;
-    padding:20px;
-    opacity:0;
-    animation: fadeIn 1s forwards;
-    animation-delay:1s;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 20px;
+    z-index: 3;
+    opacity: 0;
+    animation: fadeIn 1s forwards 1s;
   }
 
   .logo {
-    width:160px;
-    height:160px;
+    width:170px;
+    height:170px;
     border-radius:50%;
-    border:2px solid #fff;
+
+    /* Белая обводка */
+    border:2px solid rgba(255,255,255,0.85);
+
+    box-shadow:0 0 20px rgba(120,160,255,.4);
     object-fit:cover;
-    margin-bottom:15px;
+    margin-bottom:20px;
   }
 
   .tg-info {
-    font-weight:bold;
     font-size:18px;
-    color:#fff;
-    margin-bottom:40px;
+    opacity:0.85;
+    margin-bottom:25px;
   }
 
   h1 {
-    font-size:clamp(32px,7vw,56px);
-    text-transform:uppercase;
-    margin-bottom:50px;
+    font-size:clamp(36px,7vw,60px);
+    font-weight:800;
+    margin-bottom:40px;
     letter-spacing:2px;
+    color:#fff;
+
+    /* Бело-голубой glow */
+    text-shadow:0 0 15px rgba(150,180,255,.65);
   }
 
+  /* ———————————— КНОПКИ ———————————— */
   .btn-container {
     display:flex;
     flex-direction:column;
-    gap:24px;
+    gap:22px;
     width:100%;
     max-width:360px;
   }
 
   .game-btn {
-    text-align:center;
-    padding:16px 28px;
-    border-radius:12px;
-    border:1px solid #fff;
-    color:#fff;
-    background:rgba(255,255,255,0.05);
+    padding:18px 28px;
     text-decoration:none;
-    font-weight:500;
+    color:#fff;
     font-size:18px;
-    transition:all 0.3s ease, box-shadow 0.3s ease;
+    font-weight:600;
+    background:rgba(255,255,255,0.08);
+    border:1px solid rgba(255,255,255,0.8);
+    border-radius:14px;
+    transition:.3s;
     opacity:0;
-    animation: fadeInUp 0.8s forwards;
+    animation:fadeInUp .8s forwards;
   }
 
   .game-btn:hover {
-    background:rgba(255,255,255,0.15);
-    box-shadow:0 0 25px rgba(0,255,120,0.7);
-    transform:translateY(-3px);
+    background:#4f8cff;
+    box-shadow:0 0 25px rgba(120,160,255,.8);
+    transform:translateY(-4px);
   }
 
-  .game-btn:nth-child(1) { animation-delay:1.2s; }
-  .game-btn:nth-child(2) { animation-delay:1.4s; }
-  .game-btn:nth-child(3) { animation-delay:1.6s; }
-  .game-btn:nth-child(4) { animation-delay:1.8s; }
-
+  /* ———————————— VPN ———————————— */
   .vpn-note {
-    margin-top:20px;
-    font-size:20px;
-    font-weight:bold;
-    color:#fff;
+    margin-top:25px;
+    font-size:18px;
+    opacity:.85;
   }
 
   .vpn-btn {
     display:inline-block;
     margin-top:15px;
-    padding:14px 28px;
-    border:1px solid #fff;
-    border-radius:12px;
-    text-decoration:none;
-    font-weight:bold;
+    padding:16px 28px;
+    background:rgba(255,255,255,0.08);
+
+    border:1px solid rgba(255,255,255,0.8);
+    border-radius:14px;
     font-size:18px;
+    font-weight:700;
     color:#fff;
-    background:rgba(255,255,255,0.05);
-    transition:all 0.3s ease, box-shadow 0.3s ease;
+    text-decoration:none;
+
+    transition:.3s;
     opacity:0;
-    animation: fadeInUp 0.8s forwards;
-    animation-delay:2.2s;
+    animation:fadeInUp .8s forwards 2s;
   }
 
   .vpn-btn:hover {
-    background:rgba(255,255,255,0.15);
-    box-shadow:0 0 25px rgba(0,255,120,0.7);
-    transform:translateY(-3px);
+    background:#4f8cff;
+    box-shadow:0 0 25px rgba(120,160,255,.8);
+    transform:translateY(-4px);
   }
 
-  @keyframes fadeIn {
-    from {opacity:0;}
-    to {opacity:1;}
-  }
+  /* ———————————— ANIM ———————————— */
+  @keyframes fadeIn { from{opacity:0;} to{opacity:1;} }
 
   @keyframes fadeInUp {
-    from {opacity:0; transform:translateY(25px);}
-    to {opacity:1; transform:translateY(0);}
+    from{opacity:0; transform:translateY(20px);}
+    to{opacity:1;}
   }
 
-  @media(max-width:480px){
-    header { top:15px; padding:0 10px; flex-wrap:wrap; justify-content:space-between; }
-    .tg-btn { margin:5px; }
-    .logo { width:120px; height:120px; margin-bottom:10px; }
-    .tg-info { font-size:16px; margin-bottom:30px; }
-    h1 { font-size:28px; margin-bottom:30px; }
-    .game-btn { font-size:16px; padding:14px 20px; }
-    .vpn-note, .vpn-btn { font-size:16px; margin-top:10px; }
-  }
 </style>
 </head>
 <body>
 
-<!-- Слои сетки -->
+<!-- СЕТКА -->
 <div class="grid-layer grid1" id="grid1"></div>
 <div class="grid-layer grid2" id="grid2"></div>
 <div class="grid-layer grid3" id="grid3"></div>
 
 <header>
-  <a href="https://t.me/+YNjFLkeLFCo0NDE6" class="tg-btn" target="_blank">Мой ТГК</a>
-  <a href="https://t.me/+YNjFLkeLFCo0NDE6" class="tg-btn" target="_blank">Мой ТГК</a>
+  <a href="https://t.me/+YNjFLkeLFCo0NDE6" class="tg-btn">Мой ТГК</a>
+  <a href="https://t.me/+YNjFLkeLFCo0NDE6" class="tg-btn">Мой ТГК</a>
 </header>
 
 <main>
-  <img src="igor.png" alt="Logo" class="logo">
+  <img src="igor.png" class="logo">
   <div class="tg-info">НЕ РАБОТАЮТ ИГРЫ? ВКЛЮЧИ VPN</div>
+
   <h1>AVIONIX</h1>
+
   <div class="btn-container">
-    <a href="https://t.me/+YNjFLkeLFCo0NDE6" class="game-btn" target="_blank">💸 Telegram - розыгрыши,бонусы,игры</a>
-    <a href="https://t.me/+YNjFLkeLFCo0NDE6" class="game-btn" target="_blank">✅ ИГРЫ ЗДЕСЬ В ТГ </a>
+    <a href="https://t.me/+YNjFLkeLFCo0NDE6" class="game-btn">💸 Telegram - розыгрыши,бонусы,игры</a>
+    <a href="https://t.me/+YNjFLkeLFCo0NDE6" class="game-btn">✅ ИГРЫ ЗДЕСЬ В ТГ</a>
   </div>
+
   <div class="vpn-note">Если не работает — включай VPN</div>
-  <a href="https://t.me/hitvpnbot?start=1410148627402396" class="vpn-btn" target="_blank">Включить VPN</a>
+  <a href="https://t.me/hitvpnbot?start=1410148627402396" class="vpn-btn">Включить VPN</a>
 </main>
 
 <script>
+/* Параллакс */
 const layers = [
   {el: document.getElementById('grid1'), factor: 1},
   {el: document.getElementById('grid2'), factor: 2},
@@ -231,18 +235,12 @@ const layers = [
 ];
 
 window.addEventListener('mousemove', e => {
-  const x = (e.clientX / window.innerWidth - 0.5);
-  const y = (e.clientY / window.innerHeight - 0.5);
+  const x = (e.clientX / innerWidth - 0.5);
+  const y = (e.clientY / innerHeight - 0.5);
   layers.forEach(layer => {
-    const moveX = x * 30 * layer.factor;
-    const moveY = y * 30 * layer.factor;
-    layer.el.style.transform = `translate(${moveX}px, ${moveY}px)`;
+    layer.el.style.transform = `translate(${x*30*layer.factor}px, ${y*30*layer.factor}px)`;
   });
 });
-
-if(/Mobi|Android/i.test(navigator.userAgent)){
-  layers.forEach(layer => layer.el.style.transform = 'translate(0,0)');
-}
 </script>
 
 <!-- Yandex.Metrika counter -->
