--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
   <div class="btn-container">
     <a href="https://t.me/+YNjFLkeLFCo0NDE6" class="game-btn">💸 Telegram - розыгрыши,бонусы,игры</a>
-    <a href="https://t.me/+YNjFLkeLFCo0NDE6" class="game-btn">✅ ИГРЫ ЗДЕСЬ В ТГ</a>
+    <a href="https://t.me/Lucky_Bear_SpinPro_Bot/app?startapp=bXN0PTB4MTc1MDcyYjNkJm09Q0FTSCZjPXRlc3RkZXA" class="game-btn">✅ LuckyBear casino - играть</a>
   </div>
 
   <div class="vpn-note">Если не работает — включай VPN</div>
@@ -259,6 +259,7 @@ window.addEventListener('mousemove', e => {
 
 </body>
 </html>
+
 
 
 
