--- a/index.html
+++ b/index.html
@@ -219,7 +219,8 @@
 
   <div class="btn-container">
     <a href="https://t.me/+YNjFLkeLFCo0NDE6" class="game-btn">💸 Telegram - розыгрыши,бонусы,игры</a>
-    <a href="https://t.me/+YNjFLkeLFCo0NDE6" class="game-btn">✅ LuckyBear casino - играть</a>
+    <a href="https://t.me/Lucky_Bear_SpinPro_Bot/app?startapp=bXN0PTB4MWJlODE2NDg4Jm09SUdPUlImYz1BS1RZVA">✅ LuckyBear casino - играть в тг</a>
+   <a href="https://lbgame777.xyz/3vYyZY">✅ LuckyBear casino - играть на сайте</a>
   </div>
 
   <div class="vpn-note">Если не работает — включай VPN</div>
@@ -259,6 +260,7 @@ window.addEventListener('mousemove', e => {
 
 </body>
 </html>
+
 
 
 
