--- a/index.html
+++ b/index.html
@@ -216,11 +216,11 @@
   <div class="tg-info">НЕ РАБОТАЮТ ИГРЫ? ВКЛЮЧИ VPN</div>
 
   <h1>AVIONIX</h1>
+  <h1>смотри закреп тг</h1>
 
   <div class="btn-container">
     <a href="https://t.me/+YNjFLkeLFCo0NDE6" class="game-btn">💸 Telegram - розыгрыши,бонусы,игры</a>
-    <a href="https://t.me/Lucky_Bear_SpinPro_Bot/app?startapp=bXN0PTB4MWJlODE2NDg4Jm09SUdPUlImYz1BS1RZVA" class="game-btn">✅ LuckyBear casino - играть в тг</a>
-   <a href="https://lbgame777.xyz/3vYyZY" class="game-btn">✅ LuckyBear casino - играть на сайте</a>
+    <a href="https://t.me/+YNjFLkeLFCo0NDE6" class="game-btn">✅ Telegram - ИГРЫ ТУТ </a>
   </div>
 
   <div class="vpn-note">Если не работает — включай VPN</div>
@@ -260,6 +260,7 @@ window.addEventListener('mousemove', e => {
 
 </body>
 </html>
+
 
 
 
