--- a/index.html
+++ b/index.html
@@ -214,10 +214,10 @@
 <main>
   <img src="igor.png" class="logo">
   <div class="tg-info">НЕ РАБОТАЮТ ИГРЫ? ВКЛЮЧИ VPN</div>
+   <div class="tg-info">смотри закреп тг!</div>
 
   <h1>AVIONIX</h1>
-  <h1>смотри закреп тг</h1>
-
+ 
   <div class="btn-container">
     <a href="https://t.me/+YNjFLkeLFCo0NDE6" class="game-btn">💸 Telegram - розыгрыши,бонусы,игры</a>
     <a href="https://t.me/+YNjFLkeLFCo0NDE6" class="game-btn">✅ Telegram - ИГРЫ ТУТ </a>
@@ -260,6 +260,7 @@ window.addEventListener('mousemove', e => {
 
 </body>
 </html>
+
 
 
 
