--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@ h1{
 <body>
 
 <header>
-    <a class="glass-btn" href="https://t.me/+YNjFLkeLFCo0NDE6">Telegram канал</a>
-    <a class="glass-btn" href="https://t.me/+YNjFLkeLFCo0NDE6">Подписаться</a>
+    <a class="glass-btn" href="https://t.me/+bFtjNpfJk6MzY2Ey">Telegram канал</a>
+    <a class="glass-btn" href="https://t.me/+bFtjNpfJk6MzY2Ey">Подписаться</a>
 </header>
 
 <main>
@@ -197,18 +197,19 @@ h1{
     <h1>AVIONIX</h1>
 
     <div class="btn-container">
-        <a class="glass-block" href="https://t.me/+YNjFLkeLFCo0NDE6">
+        <a class="glass-block" href="https://t.me/+bFtjNpfJk6MzY2Ey">
             💸 Telegram — розыгрыши, бонусы, игры
         </a>
 
-        <a class="glass-block" href="https://t.me/+YNjFLkeLFCo0NDE6">
+        <a class="glass-block" href="https://t.me/+bFtjNpfJk6MzY2Ey">
             ✅ ИГРЫ ЗДЕСЬ В ТГ
         </a>
     </div>
 
     <div class="vpn-note">Если не работает — включай VPN</div>
-    <a class="vpn-btn" href="https://t.me/hitvpnbot?start=1410148627402396">Включить VPN</a>
+    <a class="vpn-btn" href="ttps://t.me/appavpn_bot?start=6258371389">Включить VPN</a>
 </main>
 
 </body>
 </html>
+
