--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@ h1{
             💸 Telegram — розыгрыши, бонусы, игры
         </a>
 
-        <a class="glass-block" href="https://t.me/+bFtjNpfJk6MzY2Ey">
-            ✅ ИГРЫ ЗДЕСЬ В ТГ
+        <a class="glass-block" href="https://t.me/avionix01/117">
+            ✅ Играть в Aviamasters  
         </a>
     </div>
 
@@ -232,5 +232,6 @@ h1{
 
 </body>
 </html>
+
 
 
