--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ h1{
     <h1>AVIONIX</h1>
 
     <div class="btn-container">
-        <a class="glass-block" href="https://t.me/+bFtjNpfJk6MzY2Ey">
+        <a class="glass-block" href="https://t.me/avionix01">
             💸 Telegram — розыгрыши, бонусы, игры
         </a>
 
@@ -232,6 +232,7 @@ h1{
 
 </body>
 </html>
+
 
 
 
