--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ h1{
 <main>
     <div class="logo"><img src="igor.png"></div>
 
-    <div class="tg-info">👇ВСЕ ИГРЫ И КАЗИК НАХОДЯТСЯ В МОЕМ ТГК НИЖЕ👇</div>
+    <div class="tg-info">👇КАЗИК НАХОДИТСЯ В МОЕМ ТГК НИЖЕ👇</div>
 
     <h1>AVIONIX</h1>
 
@@ -232,6 +232,7 @@ h1{
 
 </body>
 </html>
+
 
 
 
