--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ footer .copyright{
 <body>
 
 <header>
-  <a class="glass-btn instruction" href="#instruction">Инструкция</a>
+  <a class="glass-btn instruction" href="https://telegra.ph/Gajd-kak-igrat-na-Lucky-Bear-11-16">Инструкция</a>
   <a class="glass-btn tg" href="https://t.me/avionix01">TG канал</a>
 </header>
 
@@ -240,13 +240,13 @@ footer .copyright{
       </svg>
       TG канал — акции и розыгрыши
     </a>
-    <a class="glass-block" href="#">Скачать приложение</a>
-    <a class="glass-block" href="#">Играть на сайте</a>
-    <a class="glass-block" href="#">Играть в TG</a>
+    <a class="glass-block" href="https://lbgame777.xyz/4D2imr">Скачать приложение</a>
+    <a class="glass-block" href="https://lbgame777.xyz/3vYyZY">Играть на сайте</a>
+    <a class="glass-block" href="https://t.me/Lucky_Bear_SpinPro_Bot/app?startapp=bXN0PTB4MWJlODE2NDg4Jm09SUdPUlImYz1BS1RZVA">Играть в TG</a>
   </div>
 
   <div class="vpn-warning">
-    ⚠️ Если сайт не открывается — включите VPN для корректной работы.
+    ⚠️ Если игры не открывается — включите VPN для корректной работы.
   </div>
 </main>
 
@@ -262,3 +262,4 @@ footer .copyright{
 
 </body>
 </html>
+
