--- a/index.html
+++ b/index.html
@@ -2,18 +2,61 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 <title>LuckyBear</title>
+
+<!-- Тёмный режим на iPhone -->
+<meta name="color-scheme" content="dark">
+<meta name="supported-color-schemes" content="dark">
+<meta name="theme-color" content="#000000">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
 html,body{
   width:100%;height:100%;
   font-family:"Inter",sans-serif;
+  background:#030509;
   background:radial-gradient(circle at 50% 50%, #0d1424 0%, #070a11 60%, #030509 100%);
   color:#e6e9ef;
   display:flex;flex-direction:column;align-items:center;justify-content:space-between;
   overflow-x:hidden;
+}
+
+/* Анимации загрузки */
+.fade-in{
+  opacity:0;
+  animation:fadeIn .8s ease forwards;
+}
+@keyframes fadeIn{
+  from{opacity:0; transform:translateY(10px)}
+  to{opacity:1; transform:translateY(0)}
+}
+.scale-in{
+  opacity:0;
+  animation:scaleIn .9s ease forwards;
+}
+@keyframes scaleIn{
+  from{opacity:0; transform:scale(0.85)}
+  to{opacity:1; transform:scale(1)}
+}
+.delay-1{animation-delay:.2s}
+.delay-2{animation-delay:.35s}
+.delay-3{animation-delay:.5s}
+.delay-4{animation-delay:.65s}
+.delay-5{animation-delay:.8s}
+.delay-6{animation-delay:1s}
+
+/* АНИМАЦИЯ ПРИ ПРОКРУТКЕ */
+.scroll-animate {
+  opacity: 0;
+  transform: translateY(22px);
+  transition: opacity .8s ease, transform .8s ease;
+}
+.scroll-animate.visible {
+  opacity: 1;
+  transform: translateY(0);
 }
 
 /* HEADER */
@@ -55,7 +98,6 @@ header{
   color:#fff;
   background:linear-gradient(135deg,#009cff,#0077ff);
   box-shadow:0 0 12px rgba(0,150,255,0.5);
-  border:none;
 }
 .glass-btn.tg:hover{
   filter:brightness(1.15);
@@ -71,7 +113,7 @@ main{
   justify-content:center;
   text-align:center;
   width:100%;
-  padding:14vh 16px 10vh;
+  padding:18vh 16px 10vh;
 }
 
 /* ЛОГО */
@@ -81,11 +123,11 @@ main{
   align-items:center;
   justify-content:center;
   gap:20px;
-  margin-bottom:40px;
+  margin-bottom:30px;
 }
 .logo-circle{
-  width:clamp(150px,30vw,200px);
-  height:clamp(150px,30vw,200px);
+  width:clamp(150px,34vw,220px);
+  height:clamp(150px,34vw,220px);
   border-radius:50%;
   border:2px solid rgba(255,255,255,0.18);
   background:#0b1018;
@@ -96,24 +138,21 @@ main{
   box-shadow:0 0 40px rgba(0,0,0,0.6);
 }
 .logo-circle img{
-  width:100%;
-  height:100%;
-  object-fit:cover;
+  width:100%;height:100%;object-fit:cover;
 }
 
 /* TEXT */
 .neon-title{
-  font-size:clamp(18px,4vw,24px);
+  font-size:clamp(18px,5vw,26px);
   font-weight:900;
   letter-spacing:0.6px;
   background:linear-gradient(90deg,#7fbfff,#00baff);
   -webkit-background-clip:text;
   -webkit-text-fill-color:transparent;
-  text-shadow:0 0 14px rgba(0,155,255,0.55);
   margin-bottom:8px;
 }
 .subtitle{
-  font-size:clamp(12px,2.3vw,14px);
+  font-size:clamp(12px,3vw,14px);
   opacity:0.85;
   color:#cdd4df;
   max-width:90%;
@@ -123,13 +162,13 @@ main{
 /* BUTTONS */
 .btn-container{
   width:100%;max-width:380px;
-  margin:30px auto 0;
+  margin:25px auto 0;
   display:flex;flex-direction:column;gap:16px;
 }
 .glass-block{
   padding:18px 22px;
   border-radius:18px;
-  font-size:clamp(15px,3.2vw,16px);
+  font-size:clamp(15px,3.3vw,16px);
   font-weight:600;
   text-decoration:none;
   color:#e9eef6;
@@ -144,7 +183,7 @@ main{
   transform:translateY(-3px);
 }
 
-/* синяя основная (только первая в main) */
+/* синяя основная (только первая после логотипа) */
 .primary-btn{
   background:linear-gradient(135deg,#008cff,#006aff);
   border:none;
@@ -159,9 +198,9 @@ main{
 
 .tg-icon{width:22px;height:22px}
 
-/* предупреждение */
+/* VPN предупреждение */
 .vpn-warning{
-  margin:35px auto 5px;
+  margin:30px auto 5px;
   font-size:clamp(13px,2.6vw,14px);
   color:#ffcd66;
   background:rgba(255,255,255,0.05);
@@ -169,12 +208,8 @@ main{
   border-radius:12px;
   padding:12px 16px;
   max-width:420px;
-  display:flex;
-  align-items:center;
-  justify-content:center;
   text-align:center;
   backdrop-filter:blur(8px);
-  box-shadow:0 0 12px rgba(255,200,0,0.08);
 }
 
 /* FOOTER */
@@ -194,7 +229,7 @@ footer .footer-badges{
 footer .footer-badges div{
   padding:10px 18px;
   border-radius:20px;
-  font-size:clamp(12px,2.5vw,14px);
+  font-size:clamp(11px,2.5vw,13px);
   background:rgba(255,255,255,0.08);
   border:1px solid rgba(255,255,255,0.15);
   backdrop-filter:blur(10px);
@@ -204,37 +239,35 @@ footer .copyright{
   color:#a9b3c2;
 }
 
-/* MOBILE */
+/* MOBILE FIXES */
 @media(max-width:480px){
-  main{padding-top:20vh;padding-bottom:12vh;}
+  main{padding-top:21vh;padding-bottom:12vh;}
   .logo-circle{width:150px;height:150px;}
   .glass-block{padding:15px 16px;}
-  .vpn-warning{margin-top:22px;padding:10px 12px;font-size:13px;}
 }
 </style>
 </head>
 
 <body>
 
-<header>
+<header class="fade-in delay-1">
   <a class="glass-btn instruction" href="https://telegra.ph/Gajd-kak-igrat-na-Lucky-Bear-11-16">Инструкция</a>
   <a class="glass-btn tg" href="https://t.me/avionix01">TG канал</a>
 </header>
 
 <main>
 
-  <div class="logo-wrapper">
+  <div class="logo-wrapper scale-in delay-1 scroll-animate">
     <div class="logo-circle">
       <img src="lucky.png" alt="Lucky Bear">
     </div>
   </div>
 
-  <h1 class="neon-title">LUCKYBEAR — Войти и играть</h1>
-  <p class="subtitle">Нажмите «Играть на сайте» — регистрация, бонус и игра!</p>
+  <h1 class="neon-title fade-in delay-2 scroll-animate">LUCKYBEAR — Войти и играть</h1>
+  <p class="subtitle fade-in delay-3 scroll-animate">Нажмите «Играть на сайте» — регистрация, бонус и игра!</p>
 
-  <div class="btn-container">
-
-    <!-- ПЕРВАЯ — СИНЯЯ -->
+  <div class="btn-container scroll-animate">
+    <!-- синяя первая -->
     <a class="glass-block primary-btn" href="https://t.me/avionix01">
       <svg class="tg-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 240 240">
         <circle cx="120" cy="120" r="120" fill="#0088cc"/>
@@ -243,24 +276,22 @@ footer .copyright{
       TG канал — акции и розыгрыши
     </a>
 
-    <!-- остальные стеклянные -->
     <a class="glass-block" href="https://lbgame777.xyz/4D2imr">Скачать приложение</a>
     <a class="glass-block" href="https://lbgame777.xyz/3vYyZY">Играть на сайте</a>
     <a class="glass-block" href="https://t.me/Lucky_Bear_SpinPro_Bot/app?startapp=bXN0PTB4MWJlODE2NDg4Jm09SUdPUlImYz1BS1RZVA">Играть в TG</a>
-
   </div>
 
-  <div class="vpn-warning">
+  <div class="vpn-warning scroll-animate">
     Если игра не открывается — включите VPN
   </div>
 
-  <div class="btn-container" style="margin-top:10px;">
+  <div class="btn-container scroll-animate" style="margin-top:10px;">
     <a class="glass-block" href="https://t.me/appavpn_bot?start=6258371389">Включить VPN</a>
   </div>
 
 </main>
 
-<footer>
+<footer class="scroll-animate">
   <div class="footer-badges">
     <div>Быстрая регистрация</div>
     <div>Бонус к депозиту 500%</div>
@@ -269,6 +300,24 @@ footer .copyright{
   </div>
   <div class="copyright">© LuckyBear — Все права защищены</div>
 </footer>
+
+
+<!-- JS: появление при прокрутке -->
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+  const items = document.querySelectorAll(".scroll-animate");
+
+  const observer = new IntersectionObserver((entries) => {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) {
+        entry.target.classList.add("visible");
+      }
+    });
+  }, { threshold: 0.15 });
+
+  items.forEach(item => observer.observe(item));
+});
+</script>
 
 
 <!-- Yandex.Metrika counter -->
@@ -287,5 +336,6 @@ footer .copyright{
 
 </body>
 </html>
+
 
 
