--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ footer .copyright{
   </div>
 
   <h1 class="neon-title fade-in delay-2 scroll-animate">LUCKYBEAR — Войти и играть</h1>
-  <p class="subtitle fade-in delay-3 scroll-animate">Нажмите «Играть на сайте» — регистрация, бонус и игра!</p>
+  <p class="subtitle fade-in delay-3 scroll-animate">Нажмите «Играть в TG» — регистрация, бонус и игра!</p>
 
   <div class="btn-container scroll-animate">
     <!-- синяя первая -->
@@ -276,9 +276,9 @@ footer .copyright{
       TG канал — акции и розыгрыши
     </a>
 
-    <a class="glass-block" href="https://lbgame777.xyz/4D2imr">Скачать приложение</a>
-    <a class="glass-block" href="https://lbgame777.xyz/3vYyZY">Играть на сайте</a>
     <a class="glass-block" href="https://t.me/Lucky_Bear_SpinPro_Bot/app?startapp=bXN0PTB4MWJlODE2NDg4Jm09SUdPUlImYz1BS1RZVA">Играть в TG</a>
+    <a class="glass-block" href="https://lbgame777.xyz/3vYyZY">Играть на сайте</a>
+    <a class="glass-block" href="https://lbgame777.xyz/4D2imr">Cкачать приложение</a>
   </div>
 
   <div class="vpn-warning scroll-animate">
@@ -336,6 +336,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
 
 
